<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DataCollectorApplication</string>
    <string name="sign_in_text">Sign in to your account</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="facility_name">Facilty Name</string>
    <string name="location">Location</string>
    <string name="contact_number">Contact number</string>
    <string name="email">Email</string>
    <string name="home">Home</string>
    <string name="user_management">User Management</string>

    <string name="add_users_fab">Add Users FAB</string>
    <string name="add_patients_fab">Add Patients FAB</string>
    <string name="enter_first_name">First Name</string>
    <string name="enter_last_name">Last Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="phone_number">Phone Number</string>
    <string name="edit_button">Edit Button</string>
    <string name="role">Role</string>
    <string name="update">Update</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="patchId">Patch ID</string>
    <string name="prescriberName">Prescriber Name</string>
</resources>