<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="16dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/firstNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_first_name"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lastNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/enter_last_name"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            app:layout_constraintStart_toEndOf="@+id/firstNameTV"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/editBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="@android:color/transparent"
            android:contentDescription="@string/edit_button"
            android:padding="4dp"
            android:src="@drawable/edit_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <com.google.android.material.textview.MaterialTextView-->
<!--        android:id="@+id/userRoleTV"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:text="@string/role"-->
<!--        android:textColor="@color/text_color"-->
<!--        android:textSize="14sp"/>-->

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/weightTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/weight"
        android:textColor="@color/text_color"
        android:textSize="14sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/heightTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/height"
        android:textColor="@color/text_color"
        android:textSize="14sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/prescriberNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/prescriberName"
        android:textColor="@color/text_color"
        android:textSize="14sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/patientEmailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:text="@string/email"
        android:textColor="@color/text_color"
        android:textSize="14sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/patientPhoneNumTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:text="@string/phone_number"
        android:textColor="@color/text_color"
        android:textSize="14sp"/>



</LinearLayout>

</com.google.android.material.card.MaterialCardView>