<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/firstNameET"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/enter_first_name"
                android:textSize="12sp"
                android:layout_weight="0.5"
                android:textColorHint="@color/hint_text_color"
                android:textColor="@color/text_color"/>

            <Space
                android:layout_width="12dp"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/lastNameET"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/enter_last_name"
                android:textSize="12sp"
                android:layout_weight="0.5"
                android:textColorHint="@color/hint_text_color"
                android:textColor="@color/text_color"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/email"
            android:textSize="12sp"
            android:layout_marginTop="4dp"
            android:textColorHint="@color/hint_text_color"
            android:textColor="@color/text_color"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/phoneNumET"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/phone_number"
            android:textSize="12sp"
            android:layout_marginTop="4dp"
            android:textColorHint="@color/hint_text_color"
            android:textColor="@color/text_color"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/userRoleSpinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_weight="0.5"/>

            <Space
                android:layout_width="12dp"
                android:layout_height="wrap_content"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_weight="0.5"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>