<?xml version="1.0" encoding="UTF-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    tools:context=".screens.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/login_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginBottom="40dp">


<!--            <ImageView-->
<!--                android:id="@+id/appLogoIV"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_margin="38dp" />-->

            <TextView
                android:id="@+id/signInTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_text"
                android:textColor="@color/puerto_rico"
                android:textSize="16sp"
                android:fontFamily="@font/lato_bold"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="4dp"/>

            <EditText
                android:id="@+id/userIDET"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/user_name"
                android:textSize="12sp"
                android:textColorHint="@color/hint_text_color"
                android:textColor="@color/text_color"
                android:fontFamily="@font/lato_regular"
                android:background="@drawable/text_view_background"
                android:autofillHints="false"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"/>

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textSize="12sp"
                android:textColorHint="@color/hint_text_color"
                android:textColor="@color/text_color"
                android:fontFamily="@font/lato_regular"
                android:background="@drawable/text_view_background"
                android:drawableEnd="@drawable/hide_password_icon"
                android:autofillHints="false"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"/>

            <Button
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/lato_black"
                android:background="@drawable/button_background"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>